# music-scratch-scamp

./: .env.exmaple  .gitignore  Brewfile  README.md  fluidsynth.cfg  pyproject.toml  raw_lyrics.txt
misc/: DMG-CPU1_5-insts.tsv  lyrics01.txt
misc/FluidR3_GM/: insts.tsv
src/: 01.py  CarolOfTheOldOnes.py  Tetris.py  consts.py  convertSfzToSf2.py  fluid.py  live.py  makeFluidSynthConfig.py  paths.py  scratch.py  utils.py
src/CarolOfTheOldOnes/: CarolOfTheOldOnes.py  export.py  midi.py  play.py  score.py
src/Korobeiniki/: README.md  export.py  main.py  midi.py  score.py
src/Template/: export.py  main.py  midi.py  score.py
src/music_scratch_scamp/: __init__.py
